--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: release
+name: Release
 on:
   push:
     tags:
@@ -9,17 +9,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
+
       - run: git fetch --prune --unshallow
+
       - name: Setup Go
         uses: actions/setup-go@v2.1.4
         with:
           go-version: 1.16
+
       - name: Import GPG Key
         id: import_gpg
         uses: hashicorp/ghaction-import-gpg@v2.1.0
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           PASSPHRASE: ${{ secrets.PASSPHRASE }}
+
       - name: GoReleaser
         uses: goreleaser/goreleaser-action@v2.7.0
         with:
