reorganization and update license to mpl2.0

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,4 +54,4 @@ jobs:
         timeout-minutes: 10
         env:
           TF_ACC: '1'
-        run: go test -v -cover ./solana/...
+        run: go test -v -cover ./...
